# cpp-ipfs-api

./: CMakeLists.txt
include/ipfs/: client.h
src/: client.cc
src/http/: transport-curl.cc
